improve colosseum frame